  Notable bugfixes:
    - autobutcher can be re-enabled again after being stopped.
    - stopped Dwarf Manipulator from unmasking vampires.
  Misc improvements:
    - fastdwarf: new mode using debug flags, and some internal consistency fixes.
    - added a small stand-alone utility for applying and removing binary patches.
    - removebadthoughts: add --dry-run option
  New scripts:
    - binpatch: the same as the stand-alone binpatch.exe, but works at runtime.
    - region-pops: displays animal populations of the region and allows tweaking them.
    - lua: lua interpreter.
    - dfusion: misc scripts with a text based menu.
    - embark: lets you embark anywhere.
  New GUI scripts:
    - gui/guide-path: displays the cached path for minecart Guide orders.
    - gui/workshop-job: displays inputs of a workshop job and allows tweaking them.
    - gui/workflow: a front-end for the workflow plugin.
    - gui/assign-rack: works together with a binary patch to fix weapon racks.
    - gui/gm-editor: an universal editor for lots of dfhack things.
    - gui/companion-order: a adventure mode command interface for your companions.
  Workflow plugin:
    - properly considers minecarts assigned to routes busy.
    - code for deducing job outputs rewritten in lua for flexibility.
    - logic fix: collecting webs produces silk, and ungathered webs are not thread.
    - items assigned to squads are considered busy, even if not in inventory.
    - shearing and milking jobs are supported, but only with generic MILK or YARN outputs.
  New Fix Armory plugin:
    Together with a couple of binary patches and the gui/assign-rack script,
    this plugin makes weapon racks, armor stands, chests and cabinets in
    properly designated barracks be used again for storage of squad equipment.
  New Search plugin by falconne:
    Adds an incremental search function to the Stocks, Trading and Unit List screens.
  Dfusion plugin: