@@ -10,6 +10,7 @@ DFHack future
     - fastdwarf: new mode using debug flags, and some internal consistency fixes.
     - added a small stand-alone utility for applying and removing binary patches.
     - removebadthoughts: add --dry-run option
+    - superdwarf: work in adventure mode too
   New scripts:
     - binpatch: the same as the stand-alone binpatch.exe, but works at runtime.
     - region-pops: displays animal populations of the region and allows tweaking them.
